# gp-registrations-management-information-api

./: .flake8  .gitignore  Makefile  README.md  ecs-proxies-containers.yml  manifest_template.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: continuous-integration.yml  pr-lint.yaml
assets/: index.html
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: deploy-env-proxy.yml  get-build-artifact.yml  run-smoke-tests.yml  setup-proxygen-cli.yml
proxies/live/apiproxy/: gprmi.xml
proxies/live/apiproxy/policies/: AssignMessage.SetRequestHeaderX-API-Key.xml  AssignMessage.SetStatusResponse.xml  FlowCallout.GetEnvironmentKeyValueMapData.xml  KeyValueMapOperations.GetVariables.xml  ServiceCallout.CallHealthcheckEndpoint.xml  SpikeArrest.xml  VerifyApiKey.FromHeader.xml  javascript.SetStatusResponse.xml
proxies/live/apiproxy/proxies/: default.xml
proxies/live/apiproxy/targets/: gprmi-target.xml
proxies/sandbox/apiproxy/: gprmi.xml
proxies/sandbox/apiproxy/policies/: AssignMessage.Errors.CatchAllMessage.xml  KeyValueMapOperations.GetAsid.xml  RaiseFault.401Unauthorized.xml
sandbox/: Makefile  app.js  app.spec.js  index.js  package-lock.json  package.json
scripts/: set_temporary_instance.py
specification/: gp-registrations-management-information.yaml
specification/components/examples/gp2gp/: ehrGenerated.json  ehrIntegrated.json  ehrRequested.json  ehrSent.json  ehrValidated.json  registrationCompleted.json  registrationStarted.json
specification/components/examples/gpconnect/: ehrReadyToIntegrate.json  error.json  internalTransfer.json  migrateDocumentRequest.json  (+5 more)
specification/components/responses/: BadRequest.yaml  InternalServerError.yaml  OK.yaml
specification/components/schemas/: Attachment.yaml  BaseEvent.yaml  BaseEventWithOptionalSendingPracticeOdsCode.yaml  Degrade.yaml  DemographicTraceStatus.yaml  DocumentMigration.yaml  Error.yaml  GPLinks.yaml  GPTransferMetadata.yaml  Integration.yaml  Migration.yaml  Placeholder.yaml  Registration.yaml  RegistrationWithAdditionalDetails.yaml  RestError.yaml  StatusDetails.yaml  TransferCompatibilityStatus.yaml  UnsupportedDataItem.yaml  demographicTraceStatus.yaml
specification/x-nhsd-apim/: access-int.yaml  access-internal-dev.yaml  access-prod.yaml  access.yaml  dev.yaml  image.yaml  prod.yaml  sandbox.yaml  target-dev.yaml  target-prod.yaml  target-sandbox.yaml  target.yaml
test/: test_deployment.py
tests/: test_endpoints.py
(+3 files in other folders)
