[project]
python = "^3.8"

[tool.poetry]
name = "gp-registrations-management-information"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    #TODO add authors
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/gp-registrations-management-information"
homepage = ""
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
proxygen-cli = "^2.0.8"
# pytest-nhsd-apim = "^3.3.0"

[tool.poetry.scripts]
