[project]
python = "^3.8"

[tool.poetry]
name = "gp-registrations-management-information"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    #TODO add authors
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/gp-registrations-management-information"
homepage = "https://digital.nhs.uk/developer/api-catalogue/gp-registrations-management-information"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.test.dependencies]
pytest-nhsd-apim = "^3.3.9"

[tool.poetry.group.tag.dependencies]
gitpython = "^3.1.41"
semver = "^2.13.0"

[tool.poetry.scripts]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s - %(name)s.%(module)s.%(funcName)s - %(levelname)s - %(message)s"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s - %(name)s.%(module)s.%(funcName)s - %(levelname)s - %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
